@@ -63,7 +63,7 @@ U = \sustainUp
 D = \sustainDown
 pial = \notes {
     \pial
-    a,,8 a, e, <h,,8 h,> r <d,,4 d,> e,8 | 
+    \stemBoth a,,8 a, e, <h,,8 h,> r <d,,4 d,> e,8 | 
 }
 guitar = \notes {
     \guitar
