@@ -1,3 +1,10 @@
+2002-08-31 Rune Zedeler  <rune@zedeler.dk>
+
+	* input/test/sondag-morgen/*.ly: 1.6 compatibility knee fixes
+
+	* lily/tab-note-heads-engraver.cc: Bugfix for instruments not
+	having 6 strings.
+	
 2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/kpath.cc: 
